Added multiple functions for creating the database structure